--- a/src/style.css
+++ b/src/style.css
@@ -10,11 +10,14 @@ body {
 }
 h1{
     text-align: center;
-    margin-top: 60px;
-    margin-bottom: 30px;
+    margin: 60px;
 }
 .container {
     display: flex;
     gap: 20px;
     justify-content: space-around;
+    font-size: 16px;
+}
+.hello {
+    display: none;
 }
