--- a/src/style.css
+++ b/src/style.css
@@ -8,11 +8,14 @@ body {
   width: 100%;
   height: 100vh;
   background-color: aliceblue;
+  border: 2px solid;
 }
 
 h1 {
   text-align: center;
   margin: 65px;
+  text-transform: uppercase;
+  text-shadow: 1px 2px #808080a3;
 }
 
 .container {
@@ -28,4 +31,19 @@ h1 {
 
 .hello {
   display: none;
+}
+
+@media screen and (max-width: 800px) {
+  body {
+    font-size: 16px;
+  }
+
+  .container {
+    font-size: 8px;
+    margin: 20px;
+  }
+
+  input {
+    width: 70%;
+  }
 }
