--- a/src/style.css
+++ b/src/style.css
@@ -2,12 +2,16 @@
   box-sizing: border-box;
   margin: 0;
   font-size: 36px;
+  color: rgb(84 122 96);
+  text-shadow: -6px -2px 8px grey;
 }
 
 body {
   width: 100%;
   height: 100vh;
-  background-color: aliceblue;
+  background-image: radial-gradient(#1d14c3d1, #4b3c3cd4, transparent), url("../img/img.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   border: 2px solid;
 }
 
@@ -15,14 +19,17 @@ h1 {
   text-align: center;
   margin: 65px;
   text-transform: uppercase;
-  text-shadow: 1px 2px #808080a3;
+  text-shadow: 2px 4px #191818a3;
 }
 
 .container {
   display: flex;
-  gap: 20px;
   justify-content: space-around;
   font-size: 16px;
+  border: 2px solid whitesmoke;
+  border-radius: 12px;
+  padding: 60px;
+  margin: 100px 200px;
 }
 
 .head {
@@ -33,6 +40,47 @@ h1 {
   display: none;
 }
 
+h2 {
+  letter-spacing: 8px;
+}
+
+.scores {
+  border: 2px solid whitesmoke;
+  margin-top: 40px;
+}
+
+.scores li {
+  border-bottom: 1px solid;
+  list-style: none;
+  width: 100%;
+}
+
+input {
+  width: 75%;
+  margin-top: 40px;
+  box-shadow: -3px -2px 8px 0 black;
+}
+
+#add {
+  position: relative;
+}
+
+.bt {
+  position: absolute;
+  right: 115px;
+  margin-top: 40px;
+  box-shadow: 2px 3px black;
+}
+
+.addscore {
+  margin-right: -55px;
+}
+
+#reload {
+  margin-left: 10px;
+  box-shadow: 2px 3px black;
+}
+
 @media screen and (max-width: 800px) {
   body {
     font-size: 16px;
@@ -41,9 +89,5 @@ h1 {
   .container {
     font-size: 8px;
     margin: 20px;
-  }
-
-  input {
-    width: 70%;
   }
 }
